--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -117,25 +117,25 @@ Makro ArbeitsFunktionen
 <ul><li><b>Reiter Origin</b> (Ursprung)</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Origin</span>&nbsp;: Im Ursprung erzeugen: einen Punkt und eine X-, Y- und Z-Achse sowie XZ-, XY- und YZ-Ebenen. Der Ursprung der Achsen, Punkt und Ebenen sind direkt auf ausgeblendet gesetzt.</li></ul>
 </td></tr></tbody></table>
-<p><b>Punkte Reiter</b>
+<p><b>Reiter Points</b> (Punkte)
 </p>
 <table>
 <tbody><tr>
 <td><figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_03.png&amp;filetimestamp=20141225151826&amp;.html" class="mw-file-description"><img src="../File/Macro_WorkFeatures_03.png" decoding="async" width="200" height="336" class="mw-file-element" data-file-width="350" data-file-height="588"></a><figcaption></figcaption></figure>
 </td>
 <td>
-<ul><li><b>Punkte Reiter</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Objekt(e) Zentrum</span>: Erzeugt einen Punkt an der Zentrumsposition aller ausgew&auml;hlten Objekte.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Linie(n) Zentrum</span>&nbsp;: Erstelle einen Punkt an der Mittelpunktsposition jeder ausgew&auml;hlten Linie(n).</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Line(s) Extrema</span>&nbsp;: Erstelle Punkte am Start- und Endposition jeder ausgew&auml;hlten Linie(n).</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Circle(s) Center</span>&nbsp;: Create a Point at center location of each selected Circle(s) or Arc(s).</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Point along Line</span>&nbsp;: Create a Point on a line at some distance of the extremity point selected.</li>
-<li><b>SpinBox</b>&nbsp;: enter the displacement value</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Face(s) Center</span>&nbsp;: Create a Point at center location of each selected Face(s).</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Point (Line,Face)</span>&nbsp;: Create a point at the intersection of the Line and Plane selected.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Point (Line,Point)</span>&nbsp;: Create a projection Point of a Point onto a Line and symetric point.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Point (Point,Face)</span>&nbsp;: Create a projection Point of a Point onto a Face.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Base Point</span>&nbsp;: Create Base Point of all selected Object(s).</li></ul>
+<ul><li><b>Reiter Points</b> (Punkte)</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Center</span>&nbsp;: Erstellt einen Punkt an der Mitte aller ausgew&auml;hlten Objekte.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Lines(s) Center</span>&nbsp;: Erstellt einen Punkt an der Mitte jeder ausgew&auml;hlten Linie.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Line(s) Extrema</span>&nbsp;: Erstellt Punkte am Start- und Endpunkt jeder ausgew&auml;hlten Linie(n).</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Circle(s) Center</span>&nbsp;: Erstellt einen Punkt an der Mitte jedes ausgew&auml;hlten Kreises oder Bogens.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Point along Line</span>&nbsp;: Erstellt einen Punkt auf einer Linie in einem bestimmten Abstand vom ausgew&auml;hlten Endpunkt .</li>
+<li><b>Drehfeld</b>&nbsp;: Den Verdr&auml;ngungswert eingeben.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Face(s) Center</span>&nbsp;: Erstellt einen Punkt an der Mitte jeder ausgew&auml;hlten Fl&auml;che.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Point (Line,Face)</span>&nbsp;: Erstellt einen Punkt am Schnittpunkt der ausgew&auml;hlten Linie und Ebene.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Point (Line,Point)</span>&nbsp;: Erstellt einen Projektionspunkt eines Punktes auf eine Linie und einen symmetrischen Punkt.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Point (Point,Face)</span>&nbsp;: Erstellt einen Projektionspunkt eines Punktes auf eine Fl&auml;che.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Base Point</span>&nbsp;: Erstellt einen Basispunkt f&uuml;r alle ausgew&auml;hlten Objekte.</li></ul>
 </td></tr></tbody></table>
 <p><br>
 <b>Reiter Axis</b> (Achsen)
@@ -451,15 +451,15 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115050121
+Cached time: 20260115051009
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.154 seconds
-Real time usage: 0.203 seconds
+CPU time usage: 0.124 seconds
+Real time usage: 0.162 seconds
 Preprocessor visited node count: 674/1000000
-Post&#8208;expand include size: 25866/2097152 bytes
-Template argument size: 3274/2097152 bytes
+Post&#8208;expand include size: 25864/2097152 bytes
+Template argument size: 3272/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -467,18 +467,18 @@ Unstrip post&#8208;expand size: 21357/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  110.186      1 -total
-  4.16%    4.584      1 Template:Macro/de
-  3.57%    3.932      1 Template:Userdocnavi/de
-  3.38%    3.723     54 Template:KEY
-  2.35%    2.589     11 Template:Clear
-  1.65%    1.815      1 Template:Button
-  1.57%    1.729      1 Template:Navigation_menu_2
-  1.56%    1.722      1 Template:Caption
-  1.43%    1.578      1 Template:MenuCommand
+100.00%   67.074      1 -total
+  4.44%    2.980      1 Template:Macro/de
+  4.02%    2.698     54 Template:KEY
+  3.85%    2.582      1 Template:Userdocnavi/de
+  2.44%    1.639     11 Template:Clear
+  2.27%    1.520      1 Template:Button
+  2.13%    1.431      1 Template:Caption
+  1.62%    1.084      1 Template:Navigation_menu_2
+  1.43%    0.958      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115050120 and revision id 1738531. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051009 and revision id 1738533. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
