--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -154,7 +154,7 @@ Makro ArbeitsFunktionen
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane(s) Axes</span>&nbsp;: Zwei senkrechte Achsen an der Mitte einer Ebene erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Point,Axis)</span>&nbsp;: Eine Achse parallel zu einer Achse erstellen, die einen Punkt schneidet.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Axis,Point)</span>&nbsp;: Eine Achse erstellen, die senkrecht zu einer Achse steht und einen Punkt schneidet.</li>
-<li><b>Drehfeld</b>&nbsp;: Den Verdr&auml;ngungswert eingeben</li>
+<li><b>Drehfeld</b>&nbsp;: Den Abstandswert eingeben.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Axis)</span>&nbsp;: Eine Achse auf einer Ebene durch Projektion von einer anderen Achse erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Plane)</span>&nbsp;: Eine Achse durch den Schnittpunkt zweier Ebenen erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Base Axis</span>&nbsp;: Drei Achsen an der Basisposition aller ausgew&auml;hlten Objekte erstellen.</li></ul>
@@ -451,11 +451,11 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115051339
+Cached time: 20260115051349
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
+CPU time usage: 0.141 seconds
 Real time usage: 0.165 seconds
 Preprocessor visited node count: 674/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
@@ -467,18 +467,18 @@ Unstrip post&#8208;expand size: 21357/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.448      1 -total
-  5.25%    3.856      1 Template:Macro/de
-  5.19%    3.812      1 Template:Userdocnavi/de
-  3.26%    2.395     54 Template:KEY
-  2.13%    1.562     11 Template:Clear
-  2.08%    1.525      1 Template:Caption
-  2.06%    1.513      1 Template:Button
-  1.69%    1.243      1 Template:Navigation_menu_2
-  1.38%    1.012      1 Template:MenuCommand
+100.00%   79.712      1 -total
+  4.69%    3.738      1 Template:Userdocnavi/de
+  4.18%    3.329     54 Template:KEY
+  3.28%    2.616      1 Template:Macro/de
+  2.68%    2.136     11 Template:Clear
+  1.82%    1.449      1 Template:MenuCommand
+  1.72%    1.367      1 Template:Navigation_menu_2
+  1.64%    1.308      1 Template:Button
+  1.57%    1.250      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051339 and revision id 1738539. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051349 and revision id 1738541. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
