--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -159,25 +159,23 @@ Makro ArbeitsFunktionen
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Plane)</span>&nbsp;: Eine Achse durch den Schnittpunkt zweier Ebenen erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Base Axis</span>&nbsp;: Drei Achsen an der Basisposition aller ausgew&auml;hlten Objekte erstellen.</li></ul>
 </td></tr></tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Plane Tab</b>
+<p><b>Reiter Plane</b> (Ebene)
 </p>
 <table>
 <tbody><tr>
 <td><figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_05.png&amp;filetimestamp=20141225152039&amp;.html" class="mw-file-description"><img src="../File/Macro_WorkFeatures_05.png" decoding="async" width="200" height="336" class="mw-file-element" data-file-width="350" data-file-height="588"></a><figcaption></figcaption></figure>
 </td>
 <td>
-<ul><li><b>Plane Tab</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Three Points Plane</span>&nbsp;: Create a Plane crossing 3 Points.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane (Point, Axis)</span>&nbsp;: Create a plane crossing a Line and a Point. The point MUST not belongs to the Line&nbsp;!</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane (Point, _Axis)</span>&nbsp;: Create a plane perpendicular to a Line and crossing a Point.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane (Point, Plane)</span>&nbsp;: Create a plane crossing a Point and parallel to a Plane.</li>
-<li><b>SpinBox</b>&nbsp;: enter the displacement value</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane (Plane, Axis)</span>&nbsp;: Create a Plane crossing a Line and perpendicular to a Plane.</li>
-<li><b>SpinBox</b>&nbsp;: enter the displacement value</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Center Planes</span>&nbsp;: Create 3 Planes (XY, XZ and YZ) at center location of all selected Object(s).</li></ul>
+<ul><li><b>Reiter Plane</b> (Ebene)</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Three Points Plane</span>&nbsp;: Erstellt eine Ebene, die drei Punkte schneidet.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane (Point, Axis)</span>&nbsp;: Erstellt eine Ebene, die eine Linie und einen Punkt schneidet. Der Punkt darf NICHT zur Linie geh&ouml;ren!</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane (Point, _Axis)</span>&nbsp;: Erstellt eine Ebene senkrecht zu einer Linie, die einen Punkt schneidet.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane (Point, Plane)</span>&nbsp;: Erstellt eine Ebene, die einen Punkt schneidet und parallel zu einer Ebene ist.</li>
+<li><b>Drehfeld</b>&nbsp;: Den Abstandswert eingeben.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane (Plane, Axis)</span>&nbsp;: Erstellt eine Ebene, die eine Linie schneidet und senkrecht zu einer Ebene steht.</li>
+<li><b>Drehfeld</b>&nbsp;: Den Abstandswert eingeben.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Center Planes</span>&nbsp;: Erstellt drei Ebenen (XY, XZ und YZ) an der Mitte aller ausgew&auml;hlten Objekte.</li></ul>
 </td></tr></tbody></table>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Objects Tab</b>
 </p>
@@ -451,13 +449,13 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115051349
+Cached time: 20260115051433
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.165 seconds
-Preprocessor visited node count: 674/1000000
+CPU time usage: 0.145 seconds
+Real time usage: 0.203 seconds
+Preprocessor visited node count: 673/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
 Template argument size: 3272/2097152 bytes
 Highest expansion depth: 5/100
@@ -467,18 +465,18 @@ Unstrip post&#8208;expand size: 21357/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   79.712      1 -total
-  4.69%    3.738      1 Template:Userdocnavi/de
-  4.18%    3.329     54 Template:KEY
-  3.28%    2.616      1 Template:Macro/de
-  2.68%    2.136     11 Template:Clear
-  1.82%    1.449      1 Template:MenuCommand
-  1.72%    1.367      1 Template:Navigation_menu_2
-  1.64%    1.308      1 Template:Button
-  1.57%    1.250      1 Template:Caption
+100.00%  105.940      1 -total
+  3.43%    3.636      1 Template:Userdocnavi/de
+  2.72%    2.882      1 Template:Macro/de
+  2.64%    2.802     54 Template:KEY
+  2.28%    2.413      1 Template:Caption
+  1.65%    1.745     11 Template:Clear
+  1.46%    1.545      1 Template:Navigation_menu_2
+  1.36%    1.443      1 Template:Button
+  1.01%    1.071      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051349 and revision id 1738541. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051432 and revision id 1738543. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
